deployments/docs/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
  namespace: docs
  labels:
    app: docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
        - name: docs-server
          image: ghcr.io/bencegyurus/gyurus-docs:0.1.1 # {"$imagepolicy": "flux-system:docs-image"}
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: docs-service
  namespace: docs
spec:
  selector:
    app: docs
  ports:
    - name: docs-port
      port: 80
      targetPort: 80
