deployments/docs/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: docs-ingress
  namespace: docs
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`docs.gyurus.hu`)
      kind: Rule
      services:
        - name: docs-service
          port: 80
